prevent vertical wrapping of navbar

--- a/app/assets/stylesheets/argo/argo.sass
+++ b/app/assets/stylesheets/argo/argo.sass
@@ -2,6 +2,7 @@
   a.navbar-brand
     background: transparent image-url('logo.png') no-repeat top left
     background-size: 152px 52px
+    margin-bottom: 2px
 
 a.no-underline
   text-decoration: none
